fixed spacing in emergency info hazard list

--- a/rsms/src/stylesheets/style.css
+++ b/rsms/src/stylesheets/style.css
@@ -528,7 +528,7 @@ div.rsmsCenterIconContainer a p {
   font-weight: bold;
 }
 .modalHazardList > li h1{
-  font-size: 28px;
+  font-size: 26px;
   background-size: 30px;
   background-repeat: no-repeat;
   padding-left: 35px;
